--- a/src/css/app.less
+++ b/src/css/app.less
@@ -1,3 +1,13 @@
 #app{
   background-color: lightblue;
+  width: 80%;
+  margin-left: 10%;
+}
+
+*{
+  text-align: center;
+}
+
+.tile{
+  border: 1px solid black;
 }
