Made game responsive on different tilemap sizes

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -8,8 +8,29 @@
   text-align: center;
 }
 
-.tilemap{
-  margin-left: 35vh !important;
+.game-6by3{
+  .tilemap{
+    margin-left: 10vmax !important;
+  }
+  .tile img{
+    height: 10vmax;
+  }
+}
+.game-9by5{
+  .tilemap{
+    margin-left: 13vmax !important;
+  }
+  .tile img{
+    height: 6vmax;
+  }
+}
+.game-12by7{
+  .tilemap{
+    margin-left: 10vmax !important;
+  }
+  .tile img{
+    height: 5vmax;
+  }
 }
 
 .tile img{
@@ -22,7 +43,7 @@
 }
 
 .tile img{
-  height: 10vh;
+  height: 10vmax;
   image-rendering: crisp-edges;
 }
 
