--- a/src/css/app.less
+++ b/src/css/app.less
@@ -6,6 +6,11 @@
 
 *{
   text-align: center;
+
+  //font-family: 'Saira Stencil One', cursive;
+  font-family: 'Days One', sans-serif;
+  //font-family: 'Michroma', sans-serif;
+  //font-family: 'Rationale', sans-serif;
 }
 
 .game-6by3{
@@ -36,15 +41,11 @@
 .tile img{
   border-radius: 15px 15px 15px 15px;
   border: 5px inset rgba(0, 0, 0, 0);
+  image-rendering: crisp-edges;
 }
 
 .tile img:hover{
   animation: focus 1s forwards;
-}
-
-.tile img{
-  height: 10vmax;
-  image-rendering: crisp-edges;
 }
 
 
@@ -63,6 +64,15 @@
 }
 
 // Animation
+@keyframes flip{
+  0%{
+    transform: scale(0, 0);
+  }
+  100%{
+    transform: scale(1, 1);
+  }
+}
+
 @keyframes focus {
   100%{
     transform: scale(1.2, 1.2);
