--- a/src/css/app.less
+++ b/src/css/app.less
@@ -16,6 +16,35 @@
   }
 }
 
+.game-over-header{
+  padding-top: 5px;
+  font-size: 50px;
+  background-color: @primaryColors[light];
+}
+.game-over-stage-counter{
+  border: 1px solid white;
+  border-radius: 25px;
+  font-size: 35px;
+}
+.game-over{
+  button{
+    margin-top: -12px;
+    font-size: 30px;
+    color: white;
+    background-color: @primaryColors[darker];
+  }
+  position: absolute;
+  top: 35vh;
+  left: 35vw;
+  width: 30vw;
+  height: 30vh;
+  background-color: white;
+  z-index: 1;
+  border-radius: 0% 0% 50px 50px;
+  font-size: 25px;
+  animation: appear 1.5s ease-out;
+}
+
 .bg {
   background-color: #e0e0e0;
 }
@@ -99,6 +128,16 @@
   left: 95vw;
   font-size: 2vw;
 }
+.options-icon{
+  color: @primaryColors[darker];
+  position: fixed;
+  top: 45vh;
+  left: 92vw;
+  font-size: 5vw;
+  background-color: white;
+  border: 20px solid white;
+  border-radius: 50vw;
+}
 
 // Apply to tiles to rotate
 .rotate-0{
@@ -126,6 +165,15 @@
   }
   100% {
     transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes appear{
+  0%{
+    opacity: 0;
+  }
+  100%{
     opacity: 1;
   }
 }
