--- a/src/css/app.less
+++ b/src/css/app.less
@@ -33,7 +33,7 @@
   left: 35vw;
   width: 30vw;
   background-color: white;
-  z-index: 1;
+  z-index: 2;
   border-radius: 0 0 50px 50px;
   font-size: 2.5em;
   animation: appear 1.5s ease-out;
@@ -47,6 +47,16 @@
   &-header{
     padding-top: 5px;
     background-color: @primaryColors[light];
+  }
+  &-overlay{
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.38);
+    animation: appear 1.5s ease-out;
   }
 }
 
@@ -75,7 +85,7 @@
   transform: scale(1,1);
   transition: transform 0.5s cubic-bezier(.07,.95,.55,.95), border-radius 0.25s;
   &:hover{
-    filter: contrast(130%);
+    &.lit-false{ filter: contrast(130%); }
     box-shadow: 0 0 0 3px white;
     border-radius: 15%;
     transform: scale(1.2, 1.2);
