--- a/src/css/app.less
+++ b/src/css/app.less
@@ -107,11 +107,38 @@
   font-size: 2vw;
 }
 
+.popup{
+  position: fixed;
+  left: 0;
+  animation: fade 3s forwards ease-out;
+  &-text{
+    font-size: 20px;
+    background: rgba(0, 0, 0, 0.38);
+    border-radius: 10px;
+    width: 10%;
+    margin-left: 45%;
+    margin-top: 10px;
+  }
+  &::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent rgba(0, 0, 0, 0.38) transparent;
+  }
+}
+
 // Apply to tiles to rotate
 .rotate-0{ animation: rotate-360 0.5s forwards; }
 .rotate-1{ animation: rotate-90 0.5s forwards; }
 .rotate-2{ animation: rotate-180 0.5s forwards; }
 .rotate-3{ animation: rotate-270 0.5s forwards; }
+
+.flash{
+  animation: flash 0.75s forwards;
+}
 
 // Animation
 @keyframes container-fly-in {
@@ -129,9 +156,21 @@
   }
 }
 
+@keyframes flash{
+  25%{ background-color: @primaryColors[light] }
+  50%{ background-color: inherit }
+  75%{ background-color: @primaryColors[light] }
+  100%{ background-color: inherit }
+}
+
 @keyframes appear{
   0%{ opacity: 0; }
   100%{ opacity: 1; }
+}
+
+@keyframes fade{
+  0%{ opacity: 1; }
+  100%{ opacity: 0; }
 }
 
 @keyframes focus {
