--- a/src/css/app.less
+++ b/src/css/app.less
@@ -115,9 +115,10 @@
     font-size: 20px;
     background: rgba(0, 0, 0, 0.38);
     border-radius: 10px;
-    width: 10%;
-    margin-left: 45%;
+    width: 15%;
+    margin-left: 42.5%;
     margin-top: 10px;
+    z-index: 3;
   }
   &::after{
     content: "";
